# brehon

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
crates/brehon-acp/: Cargo.toml
crates/brehon-acp/src/: config.rs  decision.rs  direct_tools.rs  gateway.rs  instrument.rs  lib.rs  lifecycle.rs  openai_compatible.rs  peer.rs  permissions.rs  session.rs  session_runtime_safety_tests.rs  terminals.rs
crates/brehon-adapter-agy/: Cargo.toml
crates/brehon-adapter-agy/src/: agy.rs  lib.rs
crates/brehon-adapter-agy/src/agy/: agy_tests.rs
crates/brehon-adapter-claude/: Cargo.toml
crates/brehon-adapter-claude/src/: harness.rs  lib.rs
crates/brehon-adapter-codex/: Cargo.toml
crates/brehon-adapter-codex/src/: codex.rs  lib.rs
crates/brehon-adapter-copilot/: Cargo.toml
crates/brehon-adapter-copilot/src/: copilot.rs  lib.rs
crates/brehon-adapter-gemini/: Cargo.toml
crates/brehon-adapter-gemini/src/: acp_types.rs  gemini.rs  lib.rs  process.rs  protocol.rs  stability_runtime.rs  updates.rs
crates/brehon-adapter-junie/: Cargo.toml
crates/brehon-adapter-junie/src/: junie.rs  lib.rs
crates/brehon-adapter-kimi/: Cargo.toml
crates/brehon-adapter-kimi/src/: acp_types.rs  kimi.rs  lib.rs  permission.rs
crates/brehon-adapter-openai/: Cargo.toml
crates/brehon-adapter-openai/src/: lib.rs  openai_compatible.rs  stability.rs
crates/brehon-adapter-opencode/: Cargo.toml
crates/brehon-adapter-opencode/src/: lib.rs  opencode.rs  process.rs
crates/brehon-adapter-opencode/src/opencode/: opencode_tests.rs
crates/brehon-adapter-sdk/: Cargo.toml
crates/brehon-adapter-sdk/src/: direct_tools.rs  harness.rs  lib.rs  process.rs  session_event.rs
crates/brehon-cli/: Cargo.toml
crates/brehon-cli/src/: main.rs  names.rs  recovery.rs  signals.rs  ui.rs
crates/brehon-cli/src/commands/: claude_hook.rs  clean.rs  config.rs  doctor.rs  epic_truth.rs  factory.rs  init.rs  maintenance.rs  mod.rs  process.rs  reset.rs  review_audit.rs  runtime.rs  serve.rs  task.rs  test.rs
crates/brehon-config/: Cargo.toml
crates/brehon-config/src/: defaults.yaml  error.rs  lib.rs  merge.rs  retry_tests.rs  validate.rs
crates/brehon-config/src/validate/: runtime_policy.rs  security_policy.rs
crates/brehon-daemon/: Cargo.toml
crates/brehon-daemon/src/: lib.rs
crates/brehon-detect/: Cargo.toml
crates/brehon-detect/src/: lib.rs
crates/brehon-detect/tests/fixtures/: approval_acp.txt  rate_limit_pty.txt  success_noise.txt
crates/brehon-doctor/: Cargo.toml
crates/brehon-doctor/src/: doctor.rs  lib.rs  repair.rs  report.rs  types.rs
crates/brehon-doctor/src/checkers/: budget.rs  mod.rs  review.rs  runtime.rs  store_search.rs  store_search_tests.rs  task.rs  worktree.rs
crates/brehon-doctor/tests/: doctor_integration.rs
crates/brehon-gatekeeper/: Cargo.toml
crates/brehon-gatekeeper/src/layers/: go_build.rs  mod.rs
crates/brehon-git/: Cargo.toml
crates/brehon-git/src/: branch.rs  diff.rs  error.rs  gitignore.rs  integration.rs  lib.rs  local_scaffold.rs  merge.rs  ops.rs  rebase.rs  recovery.rs  worktree.rs
crates/brehon-git/tests/: worktree_existing_branch.rs
crates/brehon-host/: Cargo.toml
crates/brehon-host/src/: lib.rs
crates/brehon-mcp/: Cargo.toml
crates/brehon-mcp/src/: builtins.rs  error.rs  git_exec.rs  lib.rs  server.rs  server_tests.rs  session_attach.rs
crates/brehon-mcp/src/skills/: brehon-breakdown.md  brehon-discovery.md  brehon-dispatch.md  brehon-supervisor-checklist.md  brehon-supervisor.md  brehon-worker.md
crates/brehon-mcp/src/tools/: advisor.rs  agent.rs  assignment_observability.rs  context_efficiency.rs  freshness.rs  git_cherry_pick.rs  health.rs  memory.rs  memory_tests.rs  mod.rs  proof_summary.rs  research.rs  routing.rs  rules.rs  skills.rs  stability.rs  tasks.rs  tasks_proof_tests.rs  tasks_tests.rs  test_support.rs
crates/brehon-mcp/tests/: review_flow.rs
crates/brehon-mux/: Cargo.toml
crates/brehon-mux/src/: agent_config.rs  error.rs  harness.rs  lib.rs  prompt_queue.rs  pty.rs  session_scoped_queue.rs  teams.rs  teams_inbox_io.rs
crates/brehon-mux/src/mux/: activity.rs  backend.rs  command.rs  config.rs  dispatch.rs  events.rs  format.rs  lifecycle.rs  mod.rs  panesmith.rs  policy.rs  poll_budget.rs  runtime.rs  stability.rs  supervisor_recovery.rs  types.rs
crates/brehon-mux/src/mux_tests/: activity.rs  agy_recovery.rs  basic.rs  delivery.rs  delivery_gateway_startup.rs  factory.rs  mod.rs  opencode_recovery.rs  scoping.rs  suppression.rs  tick_budget.rs
crates/brehon-mux/src/pane/: activity.rs  grok_sandbox.rs  host_launch.rs  mod.rs  panesmith_shim.rs  pty_io.rs  snapshot.rs  spawn.rs  state.rs  style.rs  terminal.rs  types.rs
crates/brehon-native-agent/: Cargo.toml
crates/brehon-native-agent/src/: cli.rs  health.rs  lib.rs  main.rs  permissions.rs  provider.rs  runtime.rs  server.rs  shell.rs  terminal.rs  tools.rs  ui.rs
crates/brehon-native-agent/src/agent_runtime/: dispatch.rs  doom_loop.rs  events.rs  executor.rs  message.rs  mod.rs  orchestrator.rs  runner.rs  turn.rs
crates/brehon-native-agent/tests/: supervised_sidecar.rs
crates/brehon-notify/: Cargo.toml
crates/brehon-notify/src/: lib.rs
crates/brehon-policy/: Cargo.toml
crates/brehon-policy/src/: lib.rs
crates/brehon-ports/: Cargo.toml
crates/brehon-ports/src/: agent_gateway.rs  decision.rs  error.rs  event_store.rs  git_ops.rs  lib.rs  notification.rs  proof_store.rs  run_store.rs  runtime.rs  search_index.rs
crates/brehon-protocol/: Cargo.toml
crates/brehon-protocol/src/: codec.rs  compression.rs  lib.rs  runtime.rs  transport.rs
crates/brehon-protocol/src/messages/: model.rs
crates/brehon-pty/: Cargo.toml
crates/brehon-pty/src/: error.rs  lib.rs
crates/brehon-pty/src/pty/: config.rs  core.rs  core_exit_status.rs  (+5 more)
crates/brehon-review/: Cargo.toml
crates/brehon-review/src/: calibration.rs  chunking.rs  consolidation.rs  coordinator.rs  lib.rs  lifecycle.rs  panel.rs  queue.rs  scoring.rs  stale.rs
crates/brehon-runtime/: Cargo.toml
crates/brehon-runtime/src/: lib.rs
(+425 files in other folders)
