[workspace]
resolver = "2"
members = [
    # Core
    "crates/brehon-types",
    "crates/brehon-ports",
    "crates/brehon-config",
    "crates/brehon-orchestrator",
    "crates/brehon-supervisor",
    "crates/brehon-review",
    "crates/brehon-detect",
    "crates/brehon-policy",
    "crates/brehon-daemon",
    "crates/brehon-workflow",
    "crates/brehon-host",
    "crates/brehon-mux",
    "crates/brehon-protocol",
    "crates/brehon-recording",
    "crates/brehon-runtime",
    "crates/brehon-doctor",
    # Adapters
    "crates/brehon-adapter-sdk",
    "crates/brehon-adapter-kimi",
    "crates/brehon-adapter-junie",
    "crates/brehon-adapter-agy",
    "crates/brehon-adapter-copilot",
    "crates/brehon-adapter-opencode",
    "crates/brehon-adapter-gemini",
    "crates/brehon-adapter-claude",
    "crates/brehon-adapter-codex",
    "crates/brehon-adapter-openai",
    "crates/brehon-native-agent",
    "crates/brehon-store-fjall",
    "crates/brehon-search-tantivy",
    "crates/brehon-acp",
    "crates/brehon-pty",
    "crates/brehon-git",
    "crates/brehon-mcp",
    "crates/brehon-tui",
    # Terminal emulation
    "crates/ghostty_vt_sys",
    "crates/ghostty_vt",
    # Binary
    "crates/brehon-cli",
    # Test
    "crates/brehon-test-harness",
    # Dev tools
    "crates/splash-demo",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fjall = "2"
tantivy = "0.22"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.29"
directories = "5"
indexmap = "2"
unicode-width = "0.2"
strum = { version = "0.27", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
portable-pty = "0.9"
panesmith = { git = "https://github.com/VerifiedOrganic/panesmith.git", tag = "v0.2.2", features = ["crossterm"] }

[profile.release-fast]
inherits = "release"
lto = "thin"
