[package]
name = "brehon-adapter-codex"
version = "0.1.5"
edition = "2021"
description = "Codex (OpenAI CLI) adapter for Brehon — implements AgentAdapter for the Codex app-server websocket protocol"
license = "MIT"

[dependencies]
brehon-adapter-sdk = { path = "../brehon-adapter-sdk" }
brehon-types = { path = "../brehon-types" }
brehon-ports = { path = "../brehon-ports" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = "0.28"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
