[package]
name = "brehon-adapter-gemini"
version = "0.1.2"
edition = "2021"
description = "Gemini CLI adapter for Brehon"
license = "MIT"

[dependencies]
brehon-adapter-sdk = { path = "../brehon-adapter-sdk" }
brehon-types = { path = "../brehon-types" }
brehon-ports = { path = "../brehon-ports" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libc = "0.2"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
