[package]
name = "brehon-adapter-junie"
version = "0.1.3"
edition = "2021"
description = "Junie CLI adapter for Brehon"
license = "MIT"

[dependencies]
brehon-adapter-sdk = { path = "../brehon-adapter-sdk" }
brehon-types = { path = "../brehon-types" }
brehon-ports = { path = "../brehon-ports" }
brehon-config = { path = "../brehon-config" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
