[package]
name = "brehon-adapter-opencode"
version = "0.1.6"
edition = "2021"
description = "OpenCode adapter for Brehon"
license = "MIT"

[dependencies]
brehon-adapter-sdk = { path = "../brehon-adapter-sdk" }
brehon-types = { path = "../brehon-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
