[package]
name = "brehon-adapter-sdk"
version = "0.1.1"
edition = "2021"
description = "SDK for Brehon agent adapters — defines the AgentAdapter trait, shared protocol types, and adapter-level types"
license = "MIT"

[dependencies]
brehon-types = { path = "../brehon-types" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
libc = { version = "0.2", optional = true }

[features]
default = ["process"]
process = ["libc"]

[dev-dependencies]
tempfile = "3"
