[package]
name = "brehon-detect"
version = "0.1.2"
edition = "2024"
description = "Advisory semantic detection over Brehon runtime events"
license = "MIT"

[dependencies]
brehon-ports = { path = "../brehon-ports" }
brehon-types = { path = "../brehon-types" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
brehon-runtime = { path = "../brehon-runtime" }
