[package]
name = "brehon-git"
version = "0.1.2"
edition = "2021"
description = "Git operations adapter for worktree and branch management"
license = "MIT"

[dependencies]
brehon-types = { path = "../brehon-types" }
brehon-ports = { path = "../brehon-ports" }
git2 = "0.20"
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
filetime = "0.2"
