[package]
name = "brehon-host"
version = "0.1.1"
edition = "2024"
description = "Terminal host adapter experiments for Brehon"
license = "MIT"

[dependencies]
brehon-ports = { path = "../brehon-ports" }
brehon-types = { path = "../brehon-types" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
brehon-daemon = { path = "../brehon-daemon" }
brehon-policy = { path = "../brehon-policy" }
