[package]
name = "brehon-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server exposing tools for agent coordination"
license = "MIT"

[dependencies]
brehon-config = { path = "../brehon-config" }
brehon-mux = { path = "../brehon-mux" }
brehon-types = { path = "../brehon-types" }
brehon-ports = { path = "../brehon-ports" }
brehon-review = { path = "../brehon-review" }
brehon-git = { path = "../brehon-git" }
git2 = "0.20"
libc = "0.2"
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rmcp = { workspace = true }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
brehon-store-fjall = { path = "../brehon-store-fjall" }
tempfile = "3"
uuid = { workspace = true }
chrono = { workspace = true }
proptest = "1"
tracing-subscriber = { workspace = true }
