[package]
name = "brehon-native-agent"
version = "0.1.4"
edition = "2021"
description = "Brehon-native ACP runtime for OpenAI-compatible providers"
license = "MIT"

[dependencies]
brehon-adapter-sdk = { path = "../brehon-adapter-sdk" }
brehon-mcp = { path = "../brehon-mcp" }
brehon-types = { path = "../brehon-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
portable-pty = { workspace = true }
ratatui = { workspace = true }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
