[package]
name = "brehon-notify"
version = "0.1.5"
edition = "2021"
description = "External operator notification delivery for Brehon"
license = "MIT"

[dependencies]
brehon-types = { path = "../brehon-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
